@@ -3,6 +3,16 @@
 	* AssemblyInfo.cs:
 	  
 
+	* Session/Game/Player.cs:
+	* Session/Game/PlayerControl.cs:
+	  Bang.IPrivatePlayerView implementation now goes through a
+	  proxy for security reasons.
+
+2011-09-19  WOnder93  <omosnacek@gmail.com>
+
+	* AssemblyInfo.cs:
+	  
+
 	* Server.cs:
 	  Tiny IO improvements.
 
